# xcb-util-xrm

./: .gitignore  .gitmodules  .travis.valgrind.supp  .travis.yml  Doxyfile  Makefile.am  NEWS  README  autogen.sh  configure.ac
include/: convert.h  entry.h  externals.h  match.h  resource.h  util.h  xcb_xrm.h  xrm.h
src/: convert.c  database.c  entry.c  match.c  resource.c  util.c  xrm.c
tests/: test.c  tests_database.c  tests_match.c  tests_parser.c
xrm/: Makefile.am  entry.c  util.c  util.h  xcb-xrm.pc.in  xcb_xrm.h  xrm.c  xrm.h
